line 2 html-branch-1

--- a/htmlpage1/htmlpage1.html
+++ b/htmlpage1/htmlpage1.html
@@ -5,6 +5,7 @@
 <h1>HEADING HTML PAGE 1</h1>
 
 <p>Paragraph in HTML PAGE 1.</p>
-<p>Added this line html-branch-1-created</p>
+<p>Added this line 1 html-branch-1-created</p>
+<p>Added this line 2 html-branch-1-created</p>
 </body>
 </html>
